tests/lang/compile_fail/binary_overflow.koja
fn main
  bad = <<256>>
end
